--- a/po/pt/ktp-common-internals.po
+++ b/po/pt/ktp-common-internals.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: telepathy-common-internals\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-03-12 05:55+0000\n"
-"PO-Revision-Date: 2013-09-24 09:58+0100\n"
+"POT-Creation-Date: 2014-09-17 05:13+0000\n"
+"PO-Revision-Date: 2014-09-17 09:30+0100\n"
 "Last-Translator: José Nuno Coelho Pires <zepires@gmail.com>\n"
 "Language-Team: Portuguese <kde-i18n-pt@kde.org>\n"
 "Language: \n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-POFile-SpellExtra: Telepathy IM Kopete Avatar avatar Collabora\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-POFile-SpellExtra: Kiagiadakis Ltd exe ini Talk\n"
+"X-POFile-SpellExtra: Kiagiadakis Ltd exe ini Talk kcm accounts OTR ktp KCM\n"
 
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
@@ -39,13 +39,27 @@ msgstr "Iniciar uma Chamada de Vídeo com o %1..."
 
 #: kpeople/actionsplugin/kpeople-actions-plugin.cpp:167
 #, kde-format
-msgid "Send a File Using %1..."
-msgstr "Enviar um Ficheiro com o %1..."
+msgid "Send Files Using %1..."
+msgstr "Enviar Ficheiros com o %1..."
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:178
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:177
 #, kde-format
 msgid "Collaboratively edit a document Using %1..."
 msgstr "Editar um Documento em Conjunto com o %1..."
+
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:219
+#, kde-format
+msgid "Choose files to send to %1"
+msgstr "Escolher os ficheiros a enviar para %1"
+
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:232
+#, kde-format
+msgid "Choose a file to edit with %1"
+msgstr "Escolher um ficheiro a editar com o %1"
+
+#: kpeople/uiplugins/chatplugin/kpeople_chat_plugin.cpp:158
+msgid "Chat"
+msgstr "Conversa"
 
 #: kpeople/uiplugins/imdetailswidget.cpp:48
 msgid "IM"
@@ -64,61 +78,61 @@ msgstr ""
 msgid "Transferred file renamed"
 msgstr "Ficheiro transferido com novo nome"
 
-#: KTp/contact-info-dialog.cpp:66
+#: KTp/contact-info-dialog.cpp:67
 msgid "Full name:"
 msgstr "Nome completo:"
 
-#: KTp/contact-info-dialog.cpp:67
+#: KTp/contact-info-dialog.cpp:68
 msgid "Nickname:"
 msgstr "Alcunha:"
 
-#: KTp/contact-info-dialog.cpp:68
+#: KTp/contact-info-dialog.cpp:69
 msgid "Email:"
 msgstr "E-mail:"
 
-#: KTp/contact-info-dialog.cpp:69
+#: KTp/contact-info-dialog.cpp:70
 msgid "Phone:"
 msgstr "Telefone:"
 
-#: KTp/contact-info-dialog.cpp:70
+#: KTp/contact-info-dialog.cpp:71
 msgid "Homepage:"
 msgstr "Página Web:"
 
-#: KTp/contact-info-dialog.cpp:71
+#: KTp/contact-info-dialog.cpp:72
 msgid "Birthday:"
 msgstr "Data de nascimento:"
 
-#: KTp/contact-info-dialog.cpp:72
+#: KTp/contact-info-dialog.cpp:73
 msgid "Organization:"
 msgstr "Organização:"
 
-#: KTp/contact-info-dialog.cpp:144
+#: KTp/contact-info-dialog.cpp:147
 msgid "Change Avatar"
 msgstr "Mudar o Avatar"
 
-#: KTp/contact-info-dialog.cpp:149
+#: KTp/contact-info-dialog.cpp:152
 msgid "Clear Avatar"
 msgstr "Limpar o Avatar"
 
-#: KTp/contact-info-dialog.cpp:214
+#: KTp/contact-info-dialog.cpp:222
 msgid "Failed to load the new avatar image"
 msgstr "Não foi possível carregar a nova imagem do avatar"
 
-#: KTp/contact-info-dialog.cpp:332
-msgid "Save"
-msgstr "Gravar"
-
-#: KTp/contact-info-dialog.cpp:367
+#: KTp/contact-info-dialog.cpp:328
 msgid "Contact can see when you are online:"
 msgstr "O contacto pode ver quando está ligado:"
 
-#: KTp/contact-info-dialog.cpp:368
+#: KTp/contact-info-dialog.cpp:329
 msgid "You can see when the contact is online:"
 msgstr "Você pode ver quando o contacto está ligado:"
 
-#: KTp/contact-info-dialog.cpp:369
+#: KTp/contact-info-dialog.cpp:330
 msgid "Contact is blocked:"
 msgstr "O contacto está bloqueado:"
+
+#: KTp/contact-info-dialog.cpp:349
+msgid "Save"
+msgstr "Gravar"
 
 #: KTp/error-dictionary.cpp:37
 msgctxt "Verbose user visible error string"
@@ -711,27 +725,45 @@ msgstr "Desactivada"
 msgid "Unsorted"
 msgstr "Não ordenado"
 
-#: KTp/Models/rooms-model.cpp:72
+#: KTp/Models/rooms-model.cpp:73
 msgid "Password required"
 msgstr "Senha necessária"
 
-#: KTp/Models/rooms-model.cpp:74
+#: KTp/Models/rooms-model.cpp:75
 msgid "No password required"
 msgstr "Senha não necessária"
 
-#: KTp/Models/rooms-model.cpp:94
+#: KTp/Models/rooms-model.cpp:93
 msgid "Member count"
 msgstr "Número de membros"
 
-#: KTp/Models/rooms-model.cpp:114
+#: KTp/Models/rooms-model.cpp:113
 msgctxt "Chatrooms name"
 msgid "Name"
 msgstr "Nome"
 
-#: KTp/Models/rooms-model.cpp:116
+#: KTp/Models/rooms-model.cpp:115
 msgctxt "Chatrooms description"
 msgid "Description"
 msgstr "Descrição"
+
+#: KTp/Models/rooms-model.cpp:199
+msgid "Room bookmarked"
+msgstr "Sala marcada como favorita"
+
+#: KTp/Models/rooms-model.cpp:201
+msgid "Room not bookmarked"
+msgstr "Sala não marcada como favorita"
+
+#: KTp/OTR/utils.cpp:78
+#, kde-format
+msgid "OTR error: %1"
+msgstr "Erro do OTR: %1"
+
+#: KTp/OTR/utils.cpp:84
+#, kde-format
+msgid "Received unencrypted message: [%1]"
+msgstr "Foi recebida a mensagem não-encriptada: [%1]"
 
 #: KTp/presence.cpp:95
 msgctxt "IM presence: a person is available"
@@ -779,127 +811,142 @@ msgstr "Telepathy do KDE"
 msgid "Add new contact"
 msgstr "Adicionar um novo contacto"
 
-#: KTp/Widgets/add-contact-dialog.cpp:141 KTp/Widgets/start-chat-dialog.cpp:83
+#: KTp/Widgets/add-contact-dialog.cpp:144 KTp/Widgets/start-chat-dialog.cpp:83
 msgid "No account selected."
 msgstr "Não está nenhuma conta seleccionada."
 
-#: KTp/Widgets/add-contact-dialog.cpp:143
+#: KTp/Widgets/add-contact-dialog.cpp:146
 msgid ""
 "The requested account has been disconnected and so the contact could not be "
 "added."
 msgstr ""
 "A conta pedida foi desligada, pelo que não foi possível adicionar o contacto."
 
-#: KTp/Widgets/add-contact-dialog.cpp:146
+#: KTp/Widgets/add-contact-dialog.cpp:149
 msgid "You did not specify the name of the contact to add."
 msgstr "Não indicou o nome do contacto a adicionar."
 
-#: KTp/Widgets/add-contact-dialog.cpp:172
+#: KTp/Widgets/add-contact-dialog.cpp:175
 msgid "Failed to create new contact."
 msgstr "Não foi possível criar a nova conta."
 
-#: KTp/Widgets/add-contact-dialog.cpp:189
+#: KTp/Widgets/add-contact-dialog.cpp:192
 msgid "Failed to request presence subscription from the requested contact."
 msgstr ""
 "Não foi possível pedir a inscrição da presença para o contacto indicado."
 
 #. i18n: ectx: property (text), widget (QLabel, label)
-#: KTp/Widgets/add-contact-dialog.ui:17 KTp/Widgets/start-chat-dialog.ui:17
+#: KTp/Widgets/add-contact-dialog.ui:20 KTp/Widgets/start-chat-dialog.ui:17
 msgid "Account:"
 msgstr "Conta:"
 
 #. i18n: ectx: property (text), widget (QLabel, label_2)
-#: KTp/Widgets/add-contact-dialog.ui:24 KTp/Widgets/start-chat-dialog.ui:24
+#: KTp/Widgets/add-contact-dialog.ui:37 KTp/Widgets/start-chat-dialog.ui:24
 msgid "Screen Name:"
 msgstr "Nome Visível:"
+
+#. i18n: ectx: property (text), widget (QLabel, messageLineLabel)
+#: KTp/Widgets/add-contact-dialog.ui:47
+msgid "Message:"
+msgstr "Mensagem:"
+
+#. i18n: ectx: property (clickMessage), widget (KLineEdit, messageLineEdit)
+#: KTp/Widgets/add-contact-dialog.ui:54
+msgid "Optional message to send"
+msgstr "Mensagem opcional a enviar"
 
 #: KTp/Widgets/contact-grid-dialog.cpp:114
 msgid "Search in Contacts..."
 msgstr "Procurar nos Contactos..."
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:216
-msgid "This room is already in your favorites."
-msgstr "Esta sala já está nos seus favoritos."
+#: KTp/Widgets/join-chat-room-dialog.cpp:63
+msgctxt "Dialog title"
+msgid "Join Chat Room"
+msgstr "Juntar-se à Sala de Conversação"
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:218
-msgid "Add room"
-msgstr "Adicionar uma sala"
+#: KTp/Widgets/join-chat-room-dialog.cpp:78
+msgctxt "button"
+msgid "Join/Create"
+msgstr "Juntar/Criar"
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:218
-msgid "Name"
-msgstr "Nome"
+#: KTp/Widgets/join-chat-room-dialog.cpp:359
+msgctxt "Button text"
+msgid "Query"
+msgstr "Pesquisa"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:360
+msgctxt "Tooltip text"
+msgid "Start query"
+msgstr "Iniciar a pesquisa"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:372
+msgctxt "Button text"
+msgid "Stop"
+msgstr "Parar"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:373
+msgctxt "Tooltip text"
+msgid "Stop query"
+msgstr "Parar a pesquisa"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:421
+msgid "Could not join chatroom"
+msgstr "Não foi possível juntar-se à sala"
 
 #. i18n: ectx: property (windowTitle), widget (QWidget, JoinChatRoomDialog)
 #: KTp/Widgets/join-chat-room-dialog.ui:20
 msgid "Join Chatroom"
 msgstr "Juntar-se a Sala"
 
-#. i18n: ectx: property (text), widget (QLabel, label)
-#: KTp/Widgets/join-chat-room-dialog.ui:29
-msgid "Enter chat room:"
-msgstr "Indique a sala de conversação:"
+#. i18n: ectx: property (title), widget (QGroupBox, accountGroupBox)
+#: KTp/Widgets/join-chat-room-dialog.ui:35
+msgid "Account"
+msgstr "Conta"
 
-#. i18n: ectx: attribute (title), widget (QWidget, favoritesTab)
-#: KTp/Widgets/join-chat-room-dialog.ui:47
-msgid "Favorites"
-msgstr "Favoritos"
+#. i18n: ectx: property (title), widget (QGroupBox, chatRoomGroupBox)
+#: KTp/Widgets/join-chat-room-dialog.ui:60
+msgid "Chat Room"
+msgstr "Sala de Conversação"
 
-#. i18n: ectx: property (text), widget (QPushButton, addFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:63
-msgid "Add Room"
-msgstr "Adicionar uma Sala"
-
-#. i18n: ectx: property (text), widget (QPushButton, editFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:73
-msgid "Edit Room"
-msgstr "Editar a Sala"
-
-#. i18n: ectx: property (text), widget (QPushButton, removeFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:83
-msgid "Remove Room"
-msgstr "Remover a Sala"
-
-#. i18n: ectx: attribute (title), widget (QWidget, recentTab)
-#: KTp/Widgets/join-chat-room-dialog.ui:108
-msgid "Recent"
-msgstr "Recente"
-
-#. i18n: ectx: property (text), widget (QPushButton, removeRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:122
-msgid "Remove"
-msgstr "Remover"
+#. i18n: ectx: attribute (title), widget (QWidget, previousTab)
+#: KTp/Widgets/join-chat-room-dialog.ui:70
+msgid "Previous"
+msgstr "Anterior"
 
 #. i18n: ectx: property (text), widget (QPushButton, clearRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:132
-msgid "Clear list"
-msgstr "Limpar a lista"
+#: KTp/Widgets/join-chat-room-dialog.ui:98
+msgid "Clear Recent Rooms"
+msgstr "Limpar as Salas Recentes"
 
-#. i18n: ectx: attribute (title), widget (QWidget, queryTab)
-#. i18n: ectx: property (text), widget (QPushButton, queryPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:155
-#: KTp/Widgets/join-chat-room-dialog.ui:186
-msgid "Query"
-msgstr "Pesquisa"
+#. i18n: ectx: property (clickMessage), widget (KLineEdit, lineEdit)
+#: KTp/Widgets/join-chat-room-dialog.ui:109
+msgid "Enter chat room name or address"
+msgstr "Indique o nome ou endereço da sala de conversação"
+
+#. i18n: ectx: attribute (title), widget (QWidget, searchTab)
+#: KTp/Widgets/join-chat-room-dialog.ui:120
+msgid "Search"
+msgstr "Procurar"
 
 #. i18n: ectx: property (text), widget (QLabel, serverLabel)
-#: KTp/Widgets/join-chat-room-dialog.ui:161
+#: KTp/Widgets/join-chat-room-dialog.ui:126
 msgid "Server to be queried:"
 msgstr "Servidor a consultar:"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, serverLineEdit)
-#: KTp/Widgets/join-chat-room-dialog.ui:173
+#: KTp/Widgets/join-chat-room-dialog.ui:138
 msgid "Leave blank for the selected account's default server"
 msgstr "Deixe em branco para usar o servidor por omissão da conta seleccionada"
 
-#. i18n: ectx: property (text), widget (QPushButton, stopPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:196
-msgid "Stop"
-msgstr "Parar"
+#. i18n: ectx: property (text), widget (QToolButton, queryButton)
+#: KTp/Widgets/join-chat-room-dialog.ui:151
+msgid "Query"
+msgstr "Pesquisa"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, filterBar)
-#: KTp/Widgets/join-chat-room-dialog.ui:227
-msgid "Search rooms"
-msgstr "Procurar por salas"
+#: KTp/Widgets/join-chat-room-dialog.ui:196
+msgid "Filter rooms"
+msgstr "Filtrar as salas"
 
 #: KTp/Widgets/notification-config-dialog.cpp:43
 #: KTp/Widgets/notification-config-dialog.cpp:95
@@ -918,6 +965,22 @@ msgstr "Todos os utilizadores"
 #: KTp/Widgets/notification-config-dialog.cpp:98
 msgid "Configure notifications for all users"
 msgstr "Configurar as notificações de todos os utilizadores"
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:39
+msgid ""
+"It appears you do not have the IM Accounts control module installed. Please "
+"install ktp-accounts-kcm package."
+msgstr ""
+"Parece que não tem o módulo de controlo das Contas de MI instalado. Por "
+"favor instale o pacote 'ktp-accounts-kcm package'."
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:40
+msgid "IM Accounts KCM Plugin Is Not Installed"
+msgstr "O 'Plugin' de Contas de IM do KCM Não Está Instalado"
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:64
+msgid "Notifications"
+msgstr "Notificações"
 
 #: KTp/Widgets/start-chat-dialog.cpp:60
 msgid "Start a chat"
@@ -945,47 +1008,3 @@ msgstr ""
 #: KTp/Widgets/start-chat-dialog.cpp:132
 msgid "Failed to start a chat with the contact."
 msgstr "Não foi possível iniciar uma conversa com o contacto."
-
-#~ msgid "Open Log Viewer..."
-#~ msgstr "Abrir o Visualizador de Registos..."
-
-#~ msgid "Instant Messaging Accounts"
-#~ msgstr "Contas de Mensagens Instantâneas"
-
-#~ msgid "Me"
-#~ msgstr "Eu"
-
-#~ msgid "Ungrouped"
-#~ msgstr "Não agrupado"
-
-#~ msgid "KDE Telepathy Debug Tool"
-#~ msgstr "Ferramenta de Depuração do Telepathy para o KDE"
-
-#, fuzzy
-#~ msgctxt "Short user visible error string"
-#~ msgid "Capability not available"
-#~ msgstr "A encriptação pedida não está disponível"
-
-#~ msgid "Telepathy KDE Models Test UI"
-#~ msgstr "Interface de Teste dos Modelos KDE do Telepathy"
-
-#~ msgid "(C) 2011 Collabora Ltd"
-#~ msgstr "(C) 2011 Collabora Ltd"
-
-#~ msgid "Telepathy-KDE Models Testing UI"
-#~ msgstr "Interface de Teste dos Modelos do Telepathy-KDE"
-
-#~ msgid ""
-#~ "Tool for inspecting logs of the various underlying telepathy components"
-#~ msgstr ""
-#~ "Ferramenta para inspeccionar os registos dos vários componentes "
-#~ "subjacentes do Telepathy"
-
-#~ msgid "Copyright (C) 2011 Collabora Ltd."
-#~ msgstr "Copyright (C) 2011 Collabora Ltd."
-
-#~ msgid "George Kiagiadakis"
-#~ msgstr "George Kiagiadakis"
-
-#~ msgid "Developer"
-#~ msgstr "Desenvolvimento"
