--- a/po/sk/ktp-common-internals.po
+++ b/po/sk/ktp-common-internals.po
@@ -4,9 +4,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ktp-common-internals\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-03-12 05:55+0000\n"
-"PO-Revision-Date: 2014-03-13 20:46+0100\n"
-"Last-Translator: Roman Paholík <wizzardsk@gmail.com>\n"
+"POT-Creation-Date: 2014-09-17 05:13+0000\n"
+"PO-Revision-Date: 2014-09-17 19:14+0200\n"
+"Last-Translator: Roman Paholik <wizzardsk@gmail.com>\n"
 "Language-Team: Slovak <kde-sk@linux.sk>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
@@ -40,13 +40,27 @@ msgstr "Spustiť video hovor pomocou %1..."
 
 #: kpeople/actionsplugin/kpeople-actions-plugin.cpp:167
 #, kde-format
-msgid "Send a File Using %1..."
-msgstr "Poslať súbor pomocou %1..."
+msgid "Send Files Using %1..."
+msgstr "Poslať súbory pomocou %1..."
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:178
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:177
 #, kde-format
 msgid "Collaboratively edit a document Using %1..."
 msgstr "Spoločne editovať dokument pomocou %1..."
+
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:219
+#, kde-format
+msgid "Choose files to send to %1"
+msgstr "Vybrať súbory na odoslanie do %1"
+
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:232
+#, kde-format
+msgid "Choose a file to edit with %1"
+msgstr "Vyberte súbor na editáciu s %1"
+
+#: kpeople/uiplugins/chatplugin/kpeople_chat_plugin.cpp:158
+msgid "Chat"
+msgstr "Rozhovor"
 
 #: kpeople/uiplugins/imdetailswidget.cpp:48
 msgid "IM"
@@ -65,61 +79,61 @@ msgstr ""
 msgid "Transferred file renamed"
 msgstr "Prenášaný súbor premenovaný"
 
-#: KTp/contact-info-dialog.cpp:66
+#: KTp/contact-info-dialog.cpp:67
 msgid "Full name:"
 msgstr "Celé meno:"
 
-#: KTp/contact-info-dialog.cpp:67
+#: KTp/contact-info-dialog.cpp:68
 msgid "Nickname:"
 msgstr "Prezývka:"
 
-#: KTp/contact-info-dialog.cpp:68
+#: KTp/contact-info-dialog.cpp:69
 msgid "Email:"
 msgstr "E-mail:"
 
-#: KTp/contact-info-dialog.cpp:69
+#: KTp/contact-info-dialog.cpp:70
 msgid "Phone:"
 msgstr "Telefón:"
 
-#: KTp/contact-info-dialog.cpp:70
+#: KTp/contact-info-dialog.cpp:71
 msgid "Homepage:"
 msgstr "Domovská stránka:"
 
-#: KTp/contact-info-dialog.cpp:71
+#: KTp/contact-info-dialog.cpp:72
 msgid "Birthday:"
 msgstr "Narodeniny:"
 
-#: KTp/contact-info-dialog.cpp:72
+#: KTp/contact-info-dialog.cpp:73
 msgid "Organization:"
 msgstr "Organizácia:"
 
-#: KTp/contact-info-dialog.cpp:144
+#: KTp/contact-info-dialog.cpp:147
 msgid "Change Avatar"
 msgstr "Zmeniť avatar"
 
-#: KTp/contact-info-dialog.cpp:149
+#: KTp/contact-info-dialog.cpp:152
 msgid "Clear Avatar"
 msgstr "Vymazať avatar"
 
-#: KTp/contact-info-dialog.cpp:214
+#: KTp/contact-info-dialog.cpp:222
 msgid "Failed to load the new avatar image"
 msgstr "Zlyhalo načítanie nového obrázku avatara"
 
-#: KTp/contact-info-dialog.cpp:332
-msgid "Save"
-msgstr "Uložiť"
-
-#: KTp/contact-info-dialog.cpp:367
+#: KTp/contact-info-dialog.cpp:328
 msgid "Contact can see when you are online:"
 msgstr "Kontakt môže vidieť, kedy ste pripojený:"
 
-#: KTp/contact-info-dialog.cpp:368
+#: KTp/contact-info-dialog.cpp:329
 msgid "You can see when the contact is online:"
 msgstr "Môžete vidieť kedy je kontakt pripojený:"
 
-#: KTp/contact-info-dialog.cpp:369
+#: KTp/contact-info-dialog.cpp:330
 msgid "Contact is blocked:"
 msgstr "Kontakt je blokovaný"
+
+#: KTp/contact-info-dialog.cpp:349
+msgid "Save"
+msgstr "Uložiť"
 
 #: KTp/error-dictionary.cpp:37
 msgctxt "Verbose user visible error string"
@@ -704,27 +718,45 @@ msgstr "Vypnuté"
 msgid "Unsorted"
 msgstr "Netriedené"
 
-#: KTp/Models/rooms-model.cpp:72
+#: KTp/Models/rooms-model.cpp:73
 msgid "Password required"
 msgstr "Vyžaduje sa heslo"
 
-#: KTp/Models/rooms-model.cpp:74
+#: KTp/Models/rooms-model.cpp:75
 msgid "No password required"
 msgstr "Heslo sa nevyžaduje"
 
-#: KTp/Models/rooms-model.cpp:94
+#: KTp/Models/rooms-model.cpp:93
 msgid "Member count"
 msgstr "Počet členov"
 
-#: KTp/Models/rooms-model.cpp:114
+#: KTp/Models/rooms-model.cpp:113
 msgctxt "Chatrooms name"
 msgid "Name"
 msgstr "Názov"
 
-#: KTp/Models/rooms-model.cpp:116
+#: KTp/Models/rooms-model.cpp:115
 msgctxt "Chatrooms description"
 msgid "Description"
 msgstr "Popis"
+
+#: KTp/Models/rooms-model.cpp:199
+msgid "Room bookmarked"
+msgstr "Miestnosť pridaná do záložiek"
+
+#: KTp/Models/rooms-model.cpp:201
+msgid "Room not bookmarked"
+msgstr "Miestnosť nie je v záložkách"
+
+#: KTp/OTR/utils.cpp:78
+#, kde-format
+msgid "OTR error: %1"
+msgstr "OTR chyba: %1"
+
+#: KTp/OTR/utils.cpp:84
+#, kde-format
+msgid "Received unencrypted message: [%1]"
+msgstr "Prijatá nešifrovaná správa: [%1]"
 
 #: KTp/presence.cpp:95
 msgctxt "IM presence: a person is available"
@@ -772,125 +804,140 @@ msgstr "KDE Telepathy"
 msgid "Add new contact"
 msgstr "Pridať nový kontakt"
 
-#: KTp/Widgets/add-contact-dialog.cpp:141 KTp/Widgets/start-chat-dialog.cpp:83
+#: KTp/Widgets/add-contact-dialog.cpp:144 KTp/Widgets/start-chat-dialog.cpp:83
 msgid "No account selected."
 msgstr "Nie je vybrané žiadne konto."
 
-#: KTp/Widgets/add-contact-dialog.cpp:143
+#: KTp/Widgets/add-contact-dialog.cpp:146
 msgid ""
 "The requested account has been disconnected and so the contact could not be "
 "added."
 msgstr "Požadovaný účet bol odpojený a teda kontakt nemohol byť pridaný."
 
-#: KTp/Widgets/add-contact-dialog.cpp:146
+#: KTp/Widgets/add-contact-dialog.cpp:149
 msgid "You did not specify the name of the contact to add."
 msgstr "Nezadali ste názov kontaktu na pridanie."
 
-#: KTp/Widgets/add-contact-dialog.cpp:172
+#: KTp/Widgets/add-contact-dialog.cpp:175
 msgid "Failed to create new contact."
 msgstr "Zlyhalo vytvorenie nového kontaktu."
 
-#: KTp/Widgets/add-contact-dialog.cpp:189
+#: KTp/Widgets/add-contact-dialog.cpp:192
 msgid "Failed to request presence subscription from the requested contact."
 msgstr "Zlyhalo vyžiadanie o prítomnosti pre požadovaný kontakt."
 
 #. i18n: ectx: property (text), widget (QLabel, label)
-#: KTp/Widgets/add-contact-dialog.ui:17 KTp/Widgets/start-chat-dialog.ui:17
+#: KTp/Widgets/add-contact-dialog.ui:20 KTp/Widgets/start-chat-dialog.ui:17
 msgid "Account:"
 msgstr "Účet:"
 
 #. i18n: ectx: property (text), widget (QLabel, label_2)
-#: KTp/Widgets/add-contact-dialog.ui:24 KTp/Widgets/start-chat-dialog.ui:24
+#: KTp/Widgets/add-contact-dialog.ui:37 KTp/Widgets/start-chat-dialog.ui:24
 msgid "Screen Name:"
 msgstr "Zobrazené meno:"
+
+#. i18n: ectx: property (text), widget (QLabel, messageLineLabel)
+#: KTp/Widgets/add-contact-dialog.ui:47
+msgid "Message:"
+msgstr "Správa:"
+
+#. i18n: ectx: property (clickMessage), widget (KLineEdit, messageLineEdit)
+#: KTp/Widgets/add-contact-dialog.ui:54
+msgid "Optional message to send"
+msgstr "Voliteľný text na poslanie"
 
 #: KTp/Widgets/contact-grid-dialog.cpp:114
 msgid "Search in Contacts..."
 msgstr "Hľadať v kontaktoch..."
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:216
-msgid "This room is already in your favorites."
-msgstr "Táto miestnosť je už vo vašich obľúbených."
+#: KTp/Widgets/join-chat-room-dialog.cpp:63
+msgctxt "Dialog title"
+msgid "Join Chat Room"
+msgstr "Vstúpiť do miestnosti"
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:218
-msgid "Add room"
-msgstr "Pridať miestnosť"
+#: KTp/Widgets/join-chat-room-dialog.cpp:78
+msgctxt "button"
+msgid "Join/Create"
+msgstr "Vstúpiť/vytvoriť"
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:218
-msgid "Name"
-msgstr "Názov"
+#: KTp/Widgets/join-chat-room-dialog.cpp:359
+msgctxt "Button text"
+msgid "Query"
+msgstr "Otázka"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:360
+msgctxt "Tooltip text"
+msgid "Start query"
+msgstr "Spustiť dotaz"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:372
+msgctxt "Button text"
+msgid "Stop"
+msgstr "Zastaviť"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:373
+msgctxt "Tooltip text"
+msgid "Stop query"
+msgstr "Zastaviť dotaz"
+
+#: KTp/Widgets/join-chat-room-dialog.cpp:421
+msgid "Could not join chatroom"
+msgstr "Nemôžem vstúpiť do miestnosti"
 
 #. i18n: ectx: property (windowTitle), widget (QWidget, JoinChatRoomDialog)
 #: KTp/Widgets/join-chat-room-dialog.ui:20
 msgid "Join Chatroom"
 msgstr "Vstúpiť do miestnosti"
 
-#. i18n: ectx: property (text), widget (QLabel, label)
-#: KTp/Widgets/join-chat-room-dialog.ui:29
-msgid "Enter chat room:"
-msgstr "Vstúpiť do miestnosti:"
+#. i18n: ectx: property (title), widget (QGroupBox, accountGroupBox)
+#: KTp/Widgets/join-chat-room-dialog.ui:35
+msgid "Account"
+msgstr "Účet"
 
-#. i18n: ectx: attribute (title), widget (QWidget, favoritesTab)
-#: KTp/Widgets/join-chat-room-dialog.ui:47
-msgid "Favorites"
-msgstr "Obľúbené"
+#. i18n: ectx: property (title), widget (QGroupBox, chatRoomGroupBox)
+#: KTp/Widgets/join-chat-room-dialog.ui:60
+msgid "Chat Room"
+msgstr "Diskusná miestnosť"
 
-#. i18n: ectx: property (text), widget (QPushButton, addFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:63
-msgid "Add Room"
-msgstr "Pridať miestnosť"
-
-#. i18n: ectx: property (text), widget (QPushButton, editFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:73
-msgid "Edit Room"
-msgstr "Upraviť miestnosť"
-
-#. i18n: ectx: property (text), widget (QPushButton, removeFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:83
-msgid "Remove Room"
-msgstr "Odstrániť miestnosť"
-
-#. i18n: ectx: attribute (title), widget (QWidget, recentTab)
-#: KTp/Widgets/join-chat-room-dialog.ui:108
-msgid "Recent"
-msgstr "Nedávne"
-
-#. i18n: ectx: property (text), widget (QPushButton, removeRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:122
-msgid "Remove"
-msgstr "Odstrániť"
+#. i18n: ectx: attribute (title), widget (QWidget, previousTab)
+#: KTp/Widgets/join-chat-room-dialog.ui:70
+msgid "Previous"
+msgstr "Predošlé"
 
 #. i18n: ectx: property (text), widget (QPushButton, clearRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:132
-msgid "Clear list"
-msgstr "Vyčistiť zoznam"
+#: KTp/Widgets/join-chat-room-dialog.ui:98
+msgid "Clear Recent Rooms"
+msgstr "Vyčistiť nedávne miestnosti"
 
-#. i18n: ectx: attribute (title), widget (QWidget, queryTab)
-#. i18n: ectx: property (text), widget (QPushButton, queryPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:155
-#: KTp/Widgets/join-chat-room-dialog.ui:186
-msgid "Query"
-msgstr "Otázka"
+#. i18n: ectx: property (clickMessage), widget (KLineEdit, lineEdit)
+#: KTp/Widgets/join-chat-room-dialog.ui:109
+msgid "Enter chat room name or address"
+msgstr "Zadajte miestnosť alebo adresu"
+
+#. i18n: ectx: attribute (title), widget (QWidget, searchTab)
+#: KTp/Widgets/join-chat-room-dialog.ui:120
+msgid "Search"
+msgstr "Hľadať"
 
 #. i18n: ectx: property (text), widget (QLabel, serverLabel)
-#: KTp/Widgets/join-chat-room-dialog.ui:161
+#: KTp/Widgets/join-chat-room-dialog.ui:126
 msgid "Server to be queried:"
 msgstr "Server na dotazovanie:"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, serverLineEdit)
-#: KTp/Widgets/join-chat-room-dialog.ui:173
+#: KTp/Widgets/join-chat-room-dialog.ui:138
 msgid "Leave blank for the selected account's default server"
 msgstr "Nechajte prázdne pre predvolený server vybraného účtu"
 
-#. i18n: ectx: property (text), widget (QPushButton, stopPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:196
-msgid "Stop"
-msgstr "Zastaviť"
+#. i18n: ectx: property (text), widget (QToolButton, queryButton)
+#: KTp/Widgets/join-chat-room-dialog.ui:151
+msgid "Query"
+msgstr "Otázka"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, filterBar)
-#: KTp/Widgets/join-chat-room-dialog.ui:227
-msgid "Search rooms"
-msgstr "Hľadať miestnosti"
+#: KTp/Widgets/join-chat-room-dialog.ui:196
+msgid "Filter rooms"
+msgstr "Filtrovať miestnosti"
 
 #: KTp/Widgets/notification-config-dialog.cpp:43
 #: KTp/Widgets/notification-config-dialog.cpp:95
@@ -909,6 +956,22 @@ msgstr "Všetci používatelia"
 #: KTp/Widgets/notification-config-dialog.cpp:98
 msgid "Configure notifications for all users"
 msgstr "Nastaviť upozornenie pre všetkých používateľov"
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:39
+msgid ""
+"It appears you do not have the IM Accounts control module installed. Please "
+"install ktp-accounts-kcm package."
+msgstr ""
+"Zdá sa, že nemáte nainštalovaný ovládací modul IM účtov. Prosím nainštalujte "
+"balík ktp-accounts-kcm."
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:40
+msgid "IM Accounts KCM Plugin Is Not Installed"
+msgstr "KCM Plugin IM účtov nie je nainštalovaný"
+
+#: KTp/Widgets/settings-kcm-dialog.cpp:64
+msgid "Notifications"
+msgstr "Upozornenia"
 
 #: KTp/Widgets/start-chat-dialog.cpp:60
 msgid "Start a chat"
