Update date range and add Aleix Pols last name in the copyright file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
       libkf5notifyconfig-dev, libkf5texteditor-dev, libkf5wallet-dev,
       libkf5config-dev libkf5windowsystem-dev, libkf5iconthemes-dev,
       libaccounts-qt5-dev >= 1.10
+  * Update date range and add Aleix Pols last name in the copyright file.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
