Update kde-telepathy-kepople.install to inly track kpeople related plugins

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Add breaks/replaces libktpotrprivate9 to help migrate to new name
   * Add KDE's unstable download url to watch file
   * Update symbols files to be compatible with GCC-5
+  * Update kde-telepathy-kepople.install to inly track kpeople related plugins
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
