Update copyright file to match the above licensing fixes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ ktp-common-internals (15.08.2-1) UNRELEASED; urgency=medium
     - 0002-Relicense-invalid-license-to-LGPL-2.1.patch
     - 0003-Relicense-David-Edmundson-s-code-to-LGPL-2.1-to-matc.patch
     - 0004-Add-GPLv2-COPYING-file-as-there-s-a-few-files-still-.patch
+  * Update copyright file to match the above licensing fixes.
 
  -- Diane Trout <diane@debian.org>  Tue, 03 Nov 2015 21:23:43 -0800
 
