Add kaccounts-integration dependes to libktpcommoninternals9

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (15.08.2-3) UNRELEASED; urgency=medium
+
+  * Add kaccounts-integration dependes to libktpcommoninternals9
+
+ -- Diane Trout <diane@ghic.org>  Tue, 10 Nov 2015 09:52:58 -0800
+
 ktp-common-internals (15.08.2-2) unstable; urgency=medium
 
   * Update libktpcommoninternals9 qt logger dependency to
